--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="monetag" content="03c2ff9acbdc4c10bcc99ac40cea14ae">
   <title>Self Earning Website</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
